--- a/source/less/blocks/page.less
+++ b/source/less/blocks/page.less
@@ -32,7 +32,7 @@
   .page__shadow {
     width: 1200px;
     margin: 0 auto;
-    background-color: #ffffff;
+    background-color: @white;
     box-shadow: 0 0 15px 0 rgba(0, 0, 0, 0.2);
   }
 }
