--- a/source/less/blocks/variables.less
+++ b/source/less/blocks/variables.less
@@ -1,14 +1,18 @@
 @black: #000000;
 @blue: #81B3D2;
-@blue-hover:#669EC0;
+@blue-hover: #669EC0;
 @blue-active: #5496BD;
 @white: #ffffff;
 @grey-input: #F2F2F2;
 @grey-button: #E6E6E6;
+@grey-button-hover: #E5E5E5;
+@grey-button-active: #D5D5D5;
 @grey-advantages: #EEEEEE;
 @grey-container: #E7E5E5;
+@grey-checked: #333333;
 @marron-link: #766357;
 @marron-social: #B3B3B3;
+
 
 
 @tablet-width: 768px;
