--- a/source/less/blocks/button.less
+++ b/source/less/blocks/button.less
@@ -1,3 +1,16 @@
 .button {
   .button();
 }
+
+.button:hover {
+  background-color: @blue-hover;
+}
+
+.button:active {
+  background-color: @blue-active;
+  color: rgba(255, 255, 255, 0.3);
+}
+
+.button:disabled {
+  background-color: @grey-button-hover;
+}
