--- a/source/less/blocks/modal.less
+++ b/source/less/blocks/modal.less
@@ -57,12 +57,14 @@
 .modal__button--error {
   width: 180px;
   padding: 18px 63px 14px 64px;
+  margin: 14px 70px 35px 70px;
 }
 
 @media (min-width: @tablet-width) {
   .modal__button--error {
     width: 272px;
     padding: 18px 107px 14px 107px;
+    margin: 30px 64px 49px 64px;
   }
 }
 
@@ -70,6 +72,7 @@
   .modal__button--error {
     width: 272px;
     padding: 18px 107px 14px 107px;
+    margin: 30px 64px 49px 64px;
   }
 }
 
@@ -91,5 +94,102 @@
   .modal__button--success {
     width: 458px;
     padding: 18px 139px 14px 140px;
+  }
+}
+
+.modal__title {
+  .text-block__title();
+  margin-bottom: 37px;
+}
+
+@media (min-width: @tablet-width) {
+  .modal__title--error {
+    font-size: 30px;
+    line-height: 40px;
+    margin-bottom: 35px;
+    padding-left: 49px;
+    padding-right: 49px;
+  }
+}
+
+@media (min-width: @desktop-width) {
+  .modal__title--error {
+    font-size: 30px;
+    line-height: 40px;
+    margin-bottom: 35px;
+    padding-left: 49px;
+    padding-right: 49px;
+  }
+}
+
+
+@media (min-width: @tablet-width) {
+  .modal__title--success {
+    font-size: 30px;
+    margin-bottom: 35px;
+    padding-left: 50px;
+    padding-right: 50px;
+  }
+}
+
+@media (min-width: @desktop-width) {
+  .modal__title--success {
+    font-size: 30px;
+    margin-bottom: 35px;
+    padding-left: 50px;
+    padding-right: 50px;
+  }
+}
+
+.modal__description {
+  .text-block__description();
+}
+
+.modal__text-wrapper--error {
+  box-sizing: border-box;
+  padding: 45px 41px 14px 42px;
+}
+
+@media (min-width: @tablet-width) {
+  .modal__text-wrapper--error {
+    padding: 38px 46px 33px 47px;
+  }
+}
+
+@media (min-width: @desktop-width) {
+  .modal__text-wrapper--error {
+    padding: 38px 46px 33px 47px;
+  }
+}
+
+.modal__text-wrapper--success {
+  box-sizing: border-box;
+  padding: 39px 37px 58px 37px;
+}
+
+@media (min-width: @tablet-width) {
+  .modal__text-wrapper--success {
+    padding: 52px 97px 57px 99px;
+  }
+}
+
+
+@media (min-width: @desktop-width) {
+  .modal__text-wrapper--success {
+    padding: 52px 97px 57px 99px;
+  }
+}
+
+.modal__button-wrapper {
+  box-sizing: border-box;
+  padding: 20px;
+  background-color: @grey-input;
+}
+
+@media (min-width: @tablet-width) {
+  .modal__button-wrapper {
+    box-sizing: border-box;
+    padding: 44px 91px;
+    background-color: @grey-input;
   }
 }
