Скрывает часть кода

--- a/source/less/blocks/advantages.less
+++ b/source/less/blocks/advantages.less
@@ -117,7 +117,7 @@
     margin: 0;
   }
 }
-
+/*
 @media (max-width: @tablet-width) {
   .advantages__item--house {
     background-image: url("/img/icons/house-desktop.svg");
@@ -137,14 +137,14 @@
     background-position: 60px 90px;
   }
 }
-
+*/
 @media (min-width: @desktop-width) {
   .advantages__item--icon {
     margin: 0;
     padding: 59px 58px 79px 46px;
   }
 }
-
+/*
 @media (max-width: @desktop-width) {
   .advantages__item--house {
     background-image: url("/img/icons/house-desktop.svg");
@@ -164,7 +164,7 @@
     background-position: 59px 161px;
   }
 }
-
+*/
 .advantages__text {
   background-color: @blue;
   padding: 39px 15px 35px 16px;
