--- a/source/less/blocks/nav.less
+++ b/source/less/blocks/nav.less
@@ -100,13 +100,14 @@
     position: absolute;
     top: 0;
     right: 0;
-    z-index: 2;
+    z-index: 3;
     display: block;
     width: 56px;
     height: 56px;
     background-color: @blue;
     cursor: pointer;
     border: none;
+    border-bottom: 1px solid rgba(255, 255, 255, 0.2);
   }
 
   .nav--opened .nav__img--closed {
