--- a/source/less/blocks/about-catalog.less
+++ b/source/less/blocks/about-catalog.less
@@ -3,6 +3,22 @@
   padding: 37px 20px 25px 20px;
 }
 
+@media (max-width: @mobile-width-only) {
+  .about-catalog {
+    position: relative;
+    border-bottom: solid 1px @grey-button-hover;
+  }
+
+  .about-catalog::after {
+    position: absolute;
+    right: 0;
+    top: 0;
+    content: url('../img/triangle-mobile.svg');
+    padding: 0;
+    margin-top: -57px;
+  }
+}
+
 @media (min-width: @tablet-width) {
   .about-catalog {
     width: 768px;
