--- a/source/less/blocks/about-form.less
+++ b/source/less/blocks/about-form.less
@@ -3,6 +3,12 @@
   padding: 36px 20px 28px 20px;
 }
 
+@media (max-width: @mobile-width-only) {
+  .about-form {
+    border-bottom: solid 1px @grey-button-hover;
+  }
+}
+
 @media (min-width: @tablet-width) {
   .about-form {
     width: 768px;
