--- a/source/less/blocks/about-sedona.less
+++ b/source/less/blocks/about-sedona.less
@@ -1,7 +1,19 @@
 .about-sedona {
+  position: relative;
   width: 320px;
   box-sizing: border-box;
   padding: 32px 19px 53px 19px;
+}
+
+@media (max-width: @mobile-width-only) {
+  .about-sedona::after {
+    position: absolute;
+    right: 0;
+    top: 0;
+    content: url('../img/triangle-mobile.svg');
+    padding: 0;
+    margin-top: -57px;
+  }
 }
 
 @media (min-width: @tablet-width) {
