--- a/source/less/blocks/header.less
+++ b/source/less/blocks/header.less
@@ -2,6 +2,7 @@
   background-color: @white;
   display: flex;
   position: relative;
+  min-height: 56px;
 }
 
 @media (min-width: @tablet-width) {
@@ -14,6 +15,10 @@
 
 .header__logo {
   text-decoration: none;
+  position: absolute;
+  top: 0;
+  left: 50%;
+  transform: translateX(-50%);
 }
 
 @media (min-width: @tablet-width) {
@@ -37,24 +42,4 @@
   display: block;
   height: 96px;
   width: 185px;
-  margin-bottom: -40px;
-  margin-left: 67px;
-}
-
-@media (min-width: @tablet-width) {
-  .header__img {
-    margin: 0;
-    margin-top: -57px;
-    margin-bottom: -39px;
-    z-index: 11;
-  }
-}
-
-@media (min-width: @desktop-width) {
-  .header__img {
-    margin: 0;
-    margin-top: -57px;
-    margin-bottom: -41px;
-    z-index: 11;
-  }
 }
