--- a/source/less/blocks/variables.less
+++ b/source/less/blocks/variables.less
@@ -12,6 +12,9 @@
 @grey-checked: #333333;
 @marron-link: #766357;
 @marron-social: #B3B3B3;
+@line: #D6D6D6;
+@odd: #EAEAEA;
+@form-border: #DBDBDB;
 
 
 
