--- a/source/less/blocks/video.less
+++ b/source/less/blocks/video.less
@@ -46,7 +46,7 @@
   border: none;
   padding: 0;
   background-color: transparent;
-  background-image: url("/img/icons/polygon-mobile.svg");
+  background-image: url("../img/icons/polygon-mobile.svg");
   background-repeat: no-repeat;
   position: absolute;
   top: 234px;
