--- a/source/less/blocks/feedback.less
+++ b/source/less/blocks/feedback.less
@@ -8,7 +8,10 @@
   .feedback__form {
     box-sizing: border-box;
     margin: 0;
-    padding: 0px 60px 48px 60px;
+    padding: 0;
+    padding-left: 60px;
+    padding-right: 60px;
+    padding-bottom: 48px;
     display: grid;
     grid-template-columns: repeat(2, 324px);
     width: 768px;
@@ -19,7 +22,10 @@
   .feedback__form {
     box-sizing: border-box;
     margin: 0;
-    padding: 0px 120px 64px 120px;
+    padding: 0;
+    padding-left: 120px;
+    padding-right: 120px;
+    padding-bottom: 64px;
     display: grid;
     grid-template-columns: repeat(2, 480px);
     width: 1200px;
@@ -49,7 +55,6 @@
   display: flex;
   flex-wrap: wrap;
   margin: 0;
-
 }
 
 .feedback__wrapper {
@@ -64,7 +69,6 @@
     border-bottom: solid 1px @grey-button-hover;
   }
 }
-
 
 @media (min-width: @tablet-width) {
   .feedback__field {
@@ -234,7 +238,7 @@
   .feedback__list--opinion {
     display: grid;
     grid-template-columns: repeat(3, 280px);
-    grid-gap: 28x;
+    grid-gap: 28px;
     padding-left: 53px;
     padding-right: 53px;
   }
@@ -429,7 +433,7 @@
   .feedback__textarea {
     width: 648px;
     min-height: 150px;
-    margin-bottom: 48px
+    margin-bottom: 48px;
   }
 }
 
@@ -445,6 +449,7 @@
   padding: 18px 33px 14px 33px;
   margin-bottom: 0;
 }
+
 
 @media (min-width: @tablet-width) {
   .feedback__button--blue {
@@ -510,7 +515,6 @@
 
 .feedback__control--cirlce:active .feedback__mark--circle {
   background-color: rgba(51, 51, 51, 0.3);
-  ;
 }
 
 .feedback__choice[type="checkbox"]:checked+.feedback__mark::after {
@@ -519,7 +523,7 @@
   left: 12px;
   width: 22px;
   height: 16px;
-  background-image: url(../img/icons/tick.svg);
+  background-image: url("../img/icons/tick.svg");
   content: "";
 }
 
@@ -553,5 +557,4 @@
   margin-bottom: 16px;
   width: 280px;
   height: 46px;
-
 }
