--- a/source/less/blocks/site-list.less
+++ b/source/less/blocks/site-list.less
@@ -83,7 +83,6 @@
     .text-block__description();
     font-weight: 700;
     width: 153px;
-
   }
 
   .site-list__link--current {
@@ -95,9 +94,8 @@
   }
 
   .site-list__link:active {
-    color: rgba(0, 0, 0, 0.3)
+    color: rgba(0, 0, 0, 0.3);
   }
-
 }
 
 @media (min-width: @desktop-width) {
@@ -118,6 +116,6 @@
   }
 
   .site-list__link:active {
-    color: rgba(0, 0, 0, 0.3)
+    color: rgba(0, 0, 0, 0.3);
   }
 }
