--- a/source/less/blocks/video.less
+++ b/source/less/blocks/video.less
@@ -1,7 +1,10 @@
 .video {
   position: relative;
   box-sizing: border-box;
-  padding: 17px 20px 0px 20px;
+  padding: 0;
+  padding-top: 17px;
+  padding-left: 20px;
+  padding-bottom: 20px;
 }
 
 @media (min-width: @tablet-width) {
