--- a/source/less/blocks/welcome.less
+++ b/source/less/blocks/welcome.less
@@ -22,7 +22,7 @@
     position: absolute;
     right: 0;
     bottom: 0;
-    content: url('../img/triangle-tablet.svg');
+    content: url("../img/triangle-tablet.svg");
     padding: 0;
     margin-bottom: -5px;
   }
@@ -42,7 +42,7 @@
     position: absolute;
     right: 0;
     bottom: 0;
-    content: url('../img/triangle-desktop.svg');
+    content: url("../img/triangle-desktop.svg");
     padding: 0;
     margin-bottom: -6px;
   }
@@ -57,7 +57,6 @@
   background-repeat: no-repeat;
   display: flex;
 }
-
 
 
 @media (min-width: @tablet-width) {
@@ -84,7 +83,6 @@
     display: flex;
   }
 }
-
 
 
 .welcome__img {
