--- a/source/less/blocks/about-catalog.less
+++ b/source/less/blocks/about-catalog.less
@@ -13,9 +13,10 @@
     position: absolute;
     right: 0;
     top: 0;
-    content: url('../img/triangle-mobile.svg');
+    content: url("../img/triangle-mobile.svg");
     padding: 0;
-    margin-top: -57px;
+    margin-top: -56px;
+    width: 321px;
   }
 }
 
