--- a/source/less/blocks/about-sedona.less
+++ b/source/less/blocks/about-sedona.less
@@ -10,7 +10,7 @@
     position: absolute;
     right: 0;
     top: 0;
-    content: url('../img/triangle-mobile.svg');
+    content: url("../img/triangle-mobile.svg");
     padding: 0;
     margin-top: -57px;
   }
